# lume-air_quality

./: .gitignore  Cargo.toml  README.md  rebuild_all.sh
lume-affirmations/: Cargo.toml  affirmations_slide.json  build.sh
lume-affirmations/assets/: world.glb
lume-affirmations/data/: plugin.json
lume-affirmations/preview/: Cargo.toml
lume-affirmations/src/: lib.rs
lume-afl/: Cargo.toml  afl_slide.json  build.sh
lume-afl/assets/: world.glb
lume-afl/preview/: Cargo.toml
lume-afl/sidecar/: Cargo.toml
lume-afl/sidecar/src/: main.rs
lume-afl/src/: lib.rs
lume-budget/: Cargo.toml  budget_slide.json  build.sh
lume-budget/assets/: world.glb
lume-budget/data/: budget.yaml
lume-budget/preview/: Cargo.toml
lume-budget/src/: lib.rs
lume-calendar/: Cargo.toml  build.sh  calendar_slide.json
lume-calendar/assets/: world.glb
lume-calendar/preview/: Cargo.toml
lume-calendar/sidecar/: Cargo.toml
lume-calendar/sidecar/src/: main.rs
lume-calendar/src/: lib.rs
lume-chore/: Cargo.toml  build.sh  chore_slide.json
lume-chore/assets/: world.glb
lume-chore/data/: chores.yaml
lume-chore/preview/: Cargo.toml
lume-chore/src/: lib.rs
lume-dashboard/: Cargo.toml  README.md  build.sh  dashboard_slide.json
lume-dashboard/preview/: Cargo.toml
lume-dashboard/src/: dashboard_shader.wgsl  lib.rs
lume-did_you_know/: Cargo.toml  build.sh  did_you_know_slide.json
lume-did_you_know/assets/: world.glb
lume-did_you_know/data/facts/: animals_collective.yaml  australia.yaml  australian_law.yaml  biology.yaml  cars.yaml  cooking.yaml  english.yaml  finance_au.yaml  friendships.yaml  history.yaml  maths.yaml  parenting_daughter.yaml  physics.yaml  programming.yaml  psychology.yaml  science.yaml  skills.yaml  technology.yaml
lume-did_you_know/preview/: Cargo.toml
lume-did_you_know/src/: lib.rs
lume-flat/: Cargo.toml  build.sh  flat_slide.json
lume-flat/preview/: Cargo.toml
lume-flat/src/: flat_shader.wgsl  lib.rs
lume-lastfm/: Cargo.toml  build.sh  lastfm_slide.json
lume-lastfm/sidecar/: Cargo.toml
lume-lastfm/sidecar/src/: main.rs
lume-lastfm/src/: lib.rs
lume-loading/: build.sh  loading_slide.json
lume-loading/src/: lib.rs
lume-news/: Cargo.toml  build.sh  news_slide.json
lume-news/sidecar/: Cargo.toml
lume-news/sidecar/src/: hackernews.rs  main.rs  reddit.rs  rss.rs
lume-news/src/: lib.rs
lume-on_this_day/: Cargo.toml  build.sh  on_this_day_slide.json
lume-on_this_day/sidecar/: Cargo.toml
lume-on_this_day/sidecar/src/: main.rs
lume-on_this_day/src/: lib.rs
lume-quotes/: Cargo.toml  build.sh  quotes_slide.json
lume-quotes/assets/: world.glb
lume-quotes/data/: plugin.json
lume-quotes/preview/: Cargo.toml
lume-quotes/src/: lib.rs
lume-reminders/: Cargo.toml  build.sh  reminders_slide.json
lume-reminders/assets/: world.glb
lume-reminders/preview/: Cargo.toml
lume-reminders/sidecar/: Cargo.toml
lume-reminders/sidecar/src/: main.rs
lume-reminders/src/: lib.rs
lume-servers/: Cargo.toml  build.sh  servers_slide.json
lume-servers/assets/: world.glb
lume-servers/config/: servers.json
lume-servers/preview/: Cargo.toml
lume-servers/sidecar/: Cargo.toml
lume-servers/sidecar/src/: main.rs
lume-servers/src/: lib.rs
lume-weather/: Cargo.toml  build.sh  weather_slide.json
lume-weather/assets/: world.glb
lume-weather/preview/: Cargo.toml
lume-weather/sidecar/: Cargo.toml
lume-weather/sidecar/src/: main.rs
lume-weather/src/: lib.rs
lume-word_of_day/: Cargo.toml  build.sh  word_of_day_slide.json
lume-word_of_day/assets/: world.glb
lume-word_of_day/preview/: Cargo.toml
lume-word_of_day/sidecar/: Cargo.toml
lume-word_of_day/sidecar/src/: main.rs
lume-word_of_day/src/: lib.rs
src/: text_slide.rs  text_slide.wgsl
