[package]
name = "budget_slide"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vzglyd_text_slide = { package = "vzglyd-text-slide", path = "../../vzglyd-text-slide" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml =  "0.9"
heapless = "0.8"
